More tests, remove dead files